# sagak_test_repo

./: .env.example  .gitignore  Dockerfile  README.md  REST_API_DESIGN.md  docker-compose.yml  import_data.py  locustfile.py  main.py  pyproject.toml  requirements.txt  run_tests.py
README/: api_docs.md  test_docs.md
README/etc/: 요청인자.md
algorithm_test/: look_and_say_version1.py  look_and_say_version2.py  look_and_say_version3.py  test_look_and_say.py
app/: api_docs.md
app/api/endpoints/: food.py
app/core/: config.py
app/db/: database.py
app/models/: food.py
app/schemas/: food.py
app/services/: dependencies.py  food.py
app/tests/: README.md  conftest.py  test_db.py  test_docs.md  test_food.py  test_food_api.py
backend_test/: .env.example  README.md  docker-compose.yml
backend_test/app/: main.py
backend_test/app/api/: api.py
backend_test/app/api/endpoints/: food.py
backend_test/app/core/: config.py
backend_test/app/db/: database.py
backend_test/app/services/: food.py
backend_test/data/: insert_food_data.sql
backend_test/data/analysis_report/: 컬럼_매핑_방안.txt
backend_test/etc/: 요구사항분석.txt  요청인자.md
data/: food_nutrition.db  insert_food_data.sql  table_schema.sql
data/analysis_report/: data_analysis.py  식품영양성분_데이터분석결과.txt
data/food_data/: processed_food_data.csv
etc/: test_docs.md  test_result.txt
static/: README.md  index.html  script.js  styles.css
